--- a/test/default/Makefile.am
+++ b/test/default/Makefile.am
@@ -84,7 +84,8 @@ EXTRA_DIST = \
 	stream3.exp \
 	stream4.exp \
 	verify1.exp \
-	xchacha20.exp
+	xchacha20.exp \
+	shifumi128.exp
 
 DISTCLEANFILES = \
 	aead_aegis128l.res \
@@ -168,7 +169,8 @@ DISTCLEANFILES = \
 	stream3.res \
 	stream4.res \
 	verify1.res \
-	xchacha20.res
+	xchacha20.res \
+	shifumi128.res
 
 AM_CPPFLAGS = \
 	-DTEST_SRCDIR=\"@srcdir@\" \
@@ -249,7 +251,8 @@ TESTS_TARGETS = \
 	stream2 \
 	stream3 \
 	stream4 \
-	verify1
+	verify1 \
+	shifumi128
 
 if !EMSCRIPTEN
 TESTS_TARGETS += \
@@ -506,6 +509,9 @@ verify1_LDADD             = $(TESTS_LDADD)
 
 xchacha20_SOURCE          = cmptest.h xchacha20.c
 xchacha20_LDADD           = $(TESTS_LDADD)
+
+shifumi128_SOURC          = cmptest.h shifumi128.c
+shifumi128_LDADD          = $(TESTS_LDADD)
 
 if !MINIMAL
 TESTS_TARGETS += \
