--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -362,7 +362,6 @@ jobs:
         run: |
           export DEBIAN_FRONTEND=noninteractive
 
-          mkdir /etc/gcrypt && echo all >> /etc/gcrypt/hwf.deny
           cat <<-EOF | sudo tee /etc/apt/sources.list.d/multiarch.list >/dev/null
           deb [arch=armhf,arm64] http://ports.ubuntu.com/ focal main restricted
           deb [arch=armhf,arm64] http://ports.ubuntu.com/ focal-updates main restricted
@@ -378,6 +377,8 @@ jobs:
           sudo dpkg --add-architecture armhf
           sudo dpkg --add-architecture arm64
 
+          sudo mkdir /etc/gcrypt && sudo echo all >> /etc/gcrypt/hwf.deny
+          
           sudo apt-get update && sudo apt-get install -y qemu-user qemu-user-static libstdc++6:armhf libstdc++6:arm64
 
       - uses: actions/download-artifact@v2
