--- a/src/libsodium/Makefile.am
+++ b/src/libsodium/Makefile.am
@@ -97,6 +97,12 @@ libsodium_la_SOURCES = \
 	crypto_stream/xsalsa20/stream_xsalsa20.c \
 	crypto_verify/verify.c \
 	include/sodium/private/asm_cet.h \
+	crypto_vrf/crypto_vrf.c \
+	crypto_vrf/ietfdraft12/keypair.c \
+	crypto_vrf/ietfdraft12/prove.c \
+	crypto_vrf/ietfdraft12/verify.c \
+	crypto_vrf/ietfdraft12/vrf.c \
+	crypto_vrf/ietfdraft12/vrf_ietfdraft12.h \
 	include/sodium/private/chacha20_ietf_ext.h \
 	include/sodium/private/common.h \
 	include/sodium/private/ed25519_ref10.h \
