Support memset_explicit() if available
NetBSD has explicit_memset(), but C23 decided to implement the
same thing but call it memset_explicit() instead. Go figure.

--- a/configure.ac
+++ b/configure.ac
@@ -884,7 +884,7 @@ AS_IF([test "x$WASI" = "x"],[
 AC_CHECK_FUNCS([posix_memalign nanosleep])
 
 AS_IF([test "x$WASI" = "x"],[
-  AC_CHECK_FUNCS([memset_s explicit_bzero explicit_memset])
+  AC_CHECK_FUNCS([memset_s explicit_bzero memset_explicit explicit_memset])
 ])
 
 AC_SUBST([LIBTOOL_EXTRA_FLAGS])
