Renabling make check on linux-glibc-arm64

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -79,10 +79,7 @@ jobs:
         run: make -j $(nproc)
 
       - name: make check
-        # Disable make check on this platform
-        if: ${{ false }}
-        run: |
-          make check
+        run: make check
 
       - name: make install
         run: make install
